<resources>
    <string name="app_name">Number Guessing Game</string>
    <string name="action_settings">Settings</string>
    <string name="text_instruction_line">I have generated a random number between 0 and 1000 (inclusive). Try to guess it!</string>
    <string name="text_guess_button">Make a Guess!</string>
    <string name="text_initial_number_of_guesses">Number of guesses: 0</string>
    <string name="text_number_of_guesses">Number of guesses: </string>
    <string name="text_hint">No number guessed yet.</string>
    <string name="text_help_button">Help</string>
    <string name="text_reset_button">Reset</string>

    <string name="text_out_of_range">Please enter a number between 0 and 1000 (inclusive).</string>
    <string name="text_invalid_input">Invalid input. Please enter a valid number.</string>
    <string name="text_your_guess">Your guess: </string>
    <string name="text_higher">The generated number is HIGHER.</string>
    <string name="text_lower">The generated number is LOWER.</string>
    <string name="text_win">Congratulations. You have guessed the generated number. You are awesome!</string>

    <string name="title_activity_2">Number Guessing Game</string>
    <string name="help_information">A random number between 0 and 1000 is generated (inclusive).
        Your job is to guess the generated number. Input a number and tap the MAKE A GUESS button.
        It is shown whether your number is higher or lower than the generated number. Try to guess
        the generated number as fast as possible!</string>
</resources>
