<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="horizontal">

    <TextView
        android:text="@string/text_instruction_line"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:id="@+id/instruction_line" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/user_input"
        android:layout_below="@+id/instruction_line"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/text_guess_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onGuessButtonClick"
        android:id="@+id/guess_button"
        android:layout_below="@+id/user_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:text="@string/text_initial_number_of_guesses"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/number_of_guesses"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/text_hint"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/hint_for_user"
        android:layout_below="@+id/number_of_guesses"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/text_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onHelpButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/guess_button"
        android:layout_alignStart="@+id/guess_button"
        android:id="@+id/help_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/text_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onResetButtonClick"
        android:id="@+id/button"
        android:layout_alignTop="@+id/help_button"
        android:layout_alignRight="@+id/guess_button"
        android:layout_alignEnd="@+id/guess_button" />

</RelativeLayout>
